<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Moraleja</string>
    <string name="hello_world">Hello world!</string>
    <string name="actionbar_notificacion">Notificaciones</string>
    <string name="actionbar_settings">Preferencias</string>
    <string name="actionbar_share">Comp</string>
    <string name="actionbar_buscar">Buscar</string>
    <string name="actionbar_favorito">Favorito</string>
    <string name="actionbar_inicio">Inicio</string>
    <string name="actionbar_eventos">Eventos</string>
    <string name="coordenadas">LatLong:</string>
    <string name="eventos">Eventos</string>
    <string name="festejos">Festejos</string>
    <string name="historia">Historia</string>
    <string name="sitio">Comp</string>
    <string name="comer">Eventos</string>
    <string name="dormir">Historia</string>
    <string name="conoceMoraleja">Conoce Moraleja</string>
    <string name="deTapas">Tomamos Algo?</string>
    <string name="dondeComer">Comer y Dormir</string>
    <string name="dondeComprar">De Compras</string>
    <string name="serviciosReparaciones">Servicios y Reparaciones</string>
    <string name="copiright">Diseño de Apps © 2015 - Acerda de</string>
    <string name="quieres_aparecer_app">¿Quieres aparecer en esta App?</string>
    <string name="eventosNormal">Eventos normal</string>
    <string name="eventosActualizar">Actualizar</string>
    <string name="title_activity_eventos">EventosActivity</string>
    <string name="title_activity_detalle_evento">DetalleEventoActivity</string>
    <string name="title_activity_evento_lista_normal">Donde ir?</string>
    <string name="vacio">No hay eventos</string>
    <string name="title_activity_detalle_contenido">Te Ofrecemos</string>
    <string name="actualizacion_ok">Actualizacion finalizada con éxito</string>
    <string name="actualizacion_ko">Se ha producido un erro en el proceso de actualización</string>
    <string name="title_activity_preferencias">Preferencias</string>
    <string name="pref_actualizar_automaticamente">Actualizar automaticamente</string>
    <string name="pref_actualizar_automaticamente_sum">Realiza la actualización de contenidos nuevos automáticamente</string>
    <string name="pref_actualizar_solo_categorias">Actualizar categorias</string>
    <string name="pref_actualizar_solo_categorias_sum">Solamente actualiza la información de las categorias seleccionadas</string>
    <string name="pref_cat_config_categorias_actualizar">Configuracion actualizacion por categorias</string>
    <string name="pref_opc_notificaciones">Preferencias sobre notificaciones</string>
    <string name="pref_opc_notificaciones_sonido_sum">Emite el tono por defecto al recibir una notificación</string>
    <string name="pref_opc_notificaciones_sonido">Sonido</string>
    <string name="pref_opc_notificaciones_vibracion_sum">Vibra al recibir una notificación</string>
    <string name="pref_opc_notificaciones_vibracion">Vibración</string>
    <string name="pref_opc_notificaciones_led_sum">Emite luz led si está disponible al recibir una notificación</string>
    <string name="pref_opc_notificaciones_led">Luz led</string>

    <string name="title_activity_main">ViewFlipper Demo</string>
    <string name="str_img1">Image1</string>
    <string name="str_img2">Image2</string>
    <string name="str_img3">Image3</string>
    <string name="str_img4">Image4</string>
    <string name="str_img5">Image5</string>
    <string name="str_btn_start">Start SlideShow</string>
    <string name="str_btn_stop">Stop SlideShow</string>
    <string name="compartir1">Estoy en </string>
    <string name="compartir2">, haz clic en este enlace para localizarme.</string>
    <string name="titulo_compartir">Compartir Lugar</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="title_activity_notificaciones">Notificaciones</string>
    <string name="title_activity_lista_eventos">Eventos</string>
    <string name="title_activity_detalle_evento_temporal">DetalleEventoTemporalActivity</string>
    <string name="texto_autocompletar">Escriba al menos 2 caracteres para comenzar a autocompletar.</string>
    <string name="title_dialog_buscador">Buscador</string>
    <string name="title_dialog_indicaciones_ruta">Listado de indicaciones</string>
    <string name="actualizar_ahora">Actualizar ahora</string>
    <string name="acerca_de">Acerca de ...</string>
    <string name="title_acerca_de">Conoce Moraleja</string>
    <string name="acerca_de_desarrollada_por">Desarrollada por:</string>
    <string name="acerca_de_miguel">- Miguel Ángel Sánchez Íñigo.</string>
    <string name="acerca_de_felix">- Jose Félix Íñigo Rodríguez.</string>
    <string name="acerca_de_telefono">Teléfono de contacto: 927515231</string>
    <string name="acerca_de_correo">Correo Electrónico: visitamoraleja@gmail.com"</string>
    <string name="acerca_de_http_appmoraleja">Para aparecer en la App pulse en: http://appmoraleja.roymainformatica.com/eventos</string>
    <string name="acerca_de_http_appmoraleja_sin_url">Para aparecer en la App pulse </string>
    <string name="acerca_de_http_royma">www.roymainformatica.com </string>
    <string name="acerca_de_aqui">Aquí</string>

    <string name="descrip_borrar_notificacion">Borrará la notificación</string>
    <string name="ver_notificaciones">Ver notificaciones</string>
    <string name="ver_bandos">Ver los bandos</string>

    <string name="dlg_notif_txt_aviso">¿Confirma que desea borrar la notificacion?</string>

    <string name="map_mapa">Mapa</string>

    <string name="txt_aviso">Aviso</string>
    <string name="txt_aceptar">Aceptar</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="txt_titulo_actualizacion">Actualización de datos</string>
    <string name="txt_texto_msj_actualizacion">Se van a descargar {0} Mb aproximadamente. ¿Deseas continuar?</string>
    <string name="txt_texto__actualizar_ahora">Actualizar ahora</string>
    <string name="txt_texto_ahora_no">Ahora no</string>
    <string name="no_datos_actualizar">No hay datos para actualizar.</string>
    <string name="error_durante_actualizacion">Se ha producido un error durante la actualización de los datos.</string>
    <string name="title_activity_maps">Mapa</string>

    <string name="nombre_servicio_actualizador">Servicio de notificación de actualización de datos pendiente</string>
    <string name="title_notificacion_nuevas_actualizaciones">Existe nueva información en la aplicación. Pulsa si quieres actualiza.</string>

    <string name="sitios">Sitios</string>
    <string name="actividades">Actividades</string>
    <string name="title_activity_maps_eventos">Eventos</string>
    <string name="title_activity_sitio_evento_detalle">SitioEventoDetalle</string>

    <string name="permisos_necesarios">La aplicación necesita más permisos de los concedidos para una correcta ejecución</string>
    <string name="permisos_necesarios_1">La aplicación necesita más permisos de los concedidos para una correcta ejecución 1</string>

    <string name="no_hay_sitios">No existen sitios que mostrar</string>
    <string name="no_hay_actividades">No existen actividades que mostrar</string>

    <string name="seleccione_elemento_infowindows">Seleccione para mas detalle</string>
</resources>
