<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_lateral"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/LinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".MainActivity" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TableRow
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="20dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/botonConoce"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:background="@drawable/ic_conoce"
                        android:onClick="mostrar"
                        android:tag="SITIO" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/conoceMoraleja"
                        android:textColor="#000000"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/botonTapas"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:background="@drawable/ic_decopas"
                        android:onClick="mostrar"
                        android:tag="TOMAR_ALGO" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/deTapas"
                        android:textColor="#000000"
                        android:textStyle="bold" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="20dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/botonComer"
                        android:layout_width="85dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:background="@drawable/ic_comer"
                        android:onClick="mostrar"
                        android:tag="COMER_DORMIR" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/dondeComer"
                        android:textColor="#000000"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/botonComprar"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:background="@drawable/ic_decompras"
                        android:onClick="mostrar"
                        android:tag="DE_COMPRAS" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/dondeComprar"
                        android:textColor="#000000"
                        android:textStyle="bold" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="20dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/botonServicios"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:background="@drawable/ic_servicios"
                        android:onClick="mostrar"
                        android:tag="SERVICIOS" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/serviciosReparaciones"
                        android:textColor="#000000"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/botonFavoritos"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/ic_eventos"
                        android:onClick="mostrarEventos" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/eventos"
                        android:textColor="#000000"
                        android:textStyle="bold" />
                </LinearLayout>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            >
	            <Button
		            android:id="@+id/txBienvenida"
		            style="@style/AppTheme"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:background="@color/fondo_acerca_de_inicio"
		            android:gravity="center"
		            android:onClick="mostrarAcercade"
		            android:text="@string/quieres_aparecer_app"
		            android:textColor="@color/blanco"
		            android:textColorHint="@color/blanco"
		            android:textSize="15sp" />
        </LinearLayout>

        
    </LinearLayout>

    <!-- The navigation drawer -->

    <ListView
        android:id="@+id/menuLateralListaSitios"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/menu_lateral_color_fondo"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />

</android.support.v4.widget.DrawerLayout>